// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> works correctly in dark theme 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    appearance="default"
    category="p1"
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        Object {
          "fontFamily": "Jost-Regular",
          "fontSize": 17,
        },
      ]
    }
  >
    Test Paragraph
  </Text>
</View>
`;

exports[`<Paragraph /> works correctly in light theme 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    appearance="default"
    category="p1"
    style={
      Array [
        Object {
          "color": "#222B45",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        Object {
          "fontFamily": "Jost-Regular",
          "fontSize": 17,
        },
      ]
    }
  >
    Test Paragraph
  </Text>
</View>
`;
